# crypto_sentiment_model_fast_api

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  config.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup_env.sh  test_data.md
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
conf/: config.yaml
conf/logger/: base.yaml
conf/model/: bert.yaml  tf_idf.yaml
cryptonews_sentiment_analysis_app/: utils.py
cryptonews_sentiment_analysis_app/app/: api.py
cryptonews_sentiment_analysis_app/model/: engine.py  train.py
cryptonews_sentiment_base_model/: api.py  data.py  inference.py  model.py  train.py  utils.py
data/: toy_train.csv
db_service/: env.yml
db_service/app/: db.py  main.py  utils.py
db_service/app/api/: db.py
docs/: conf.py  data.rst  index.rst  inference.rst  model.rst  train.rst  utils.rst
docs/_static/: my_theme.css
model_service/: Dockerfile  README.md  env.yml  environment.yml  setup.py
model_service/app/: main.py  train.py  utils.py
model_service/app/api/: engine.py  model.py  news.py
model_service/app/models/: __init__.py  tf_idf.py
model_service/app/models/bert/: __init__.py  dataset.py  model.py  pipeline.py  utils.py
model_service/conf/: config.yaml
model_service/conf/logger/: base.yaml
model_service/conf/model/: bert.yaml  tf_idf.yaml
src/: api.py  data.py  inference.py  model.py  train.py
static/models/: logit_tfidf_btc_sentiment.pkl
tests/: test_data_fields.py
