[tool.poetry]
name = "crypto-sentiment-base-model"
version = "0.1.0"
description = "Cryptonews sentiment analysis API"
authors = [
    "Yury Kashnitsky <yury.kashnitsky@gmail.com>",
    "Dmitry Labazkin <labdmitriy@gmail.com>",
    "Zalina Rusinova <z.gilvanova@gmail.com>",
    "Arseniy Glotov <senya.ds.researcher@gmail.com>",
    "Nikita Zakharov <nikitaurman2@gmail.com>",
    "Victor Aleksandrin <aleksandrinvictor@gmail.com>",
]
license = "CCBY-4.0"

[tool.poetry.dependencies]
python = ">=3.8,<=3.9.9"

fastapi = "^0.75.1"
fastapi_health = "^0.4.0"
isort = "^5.10.1"
matplotlib = "^3.5.1"
numpy = "^1.21.5"
pandas = "^1.3.5"
pre_commit = "^2.18.1"
PyYAML = "^5.3.1"
scikit-learn = "^1.0.2"
uvicorn = "^0.17.6"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
click = "^8.0.4"
flake8 = "^3.7.9"
mypy = "^0.770"
pylint = "^2.12.2"
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-html = "^2.1.0"

[tool.black]
line-length = 119
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.tox
  | \*venv
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
